syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bank.models";

message BalanceCheckRequest {
  int32 account_number = 1;
}

message Balance {
  int32 amount = 1;
}

message WithdrawRequest {
  int32 account_number = 1;
  int32 amount = 2;
}

message Money {
  int32 value = 1;
}

message DepositRequest {
  int32 account_number = 1;
  int32 amount = 2;
}





message TransferRequest {
  int32 from_account = 1;
  int32 to_account = 2;
  int32 amount = 3;
}

message Account {
  int32 account_number = 1;
  int32 amount = 2;
}

enum TransferStatus {
  FAILED = 0;
  SUCCESS = 1;
}

message TransferResponse {
  TransferStatus status = 1;
  repeated Account accounts = 2;
}

service BankService {
  // unary
  rpc getBalance(BalanceCheckRequest) returns (Balance);

  // server-side streaming
  rpc withdraw(WithdrawRequest) returns(stream Money);

  // client-side streaming
  rpc cashDeposit(stream DepositRequest) returns (Balance);

  // bi directional streaming
  rpc transfer(stream TransferRequest) returns (stream TransferResponse);
}